UI overflow prevention

--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,6 @@
 @theme{
     --font-display:"Manrope","sans-serif";
 }
+body{
+    overflow-x: hidden;
+}
